--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SQL PREMIUM HUB | RIZWAN</title>
+    
+    <title>SQL PREMIUM HUB | Best CC Shop & Card Shop Online</title>
+    <meta name="description" content="Welcome to SQL PREMIUM HUB. The best CC Shop and Card Shop for high balance non-Vv cards. Fast delivery and 100% working cards by Rizwan.">
+    <meta name="keywords" content="cc shop, card shop, carding, sql premium hub, rizwan cards, non-vv cards shop, buy cards online">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://sqlccshop.github.io/cc/">
+
+    <meta property="og:title" content="SQL PREMIUM HUB | Best CC Shop">
+    <meta property="og:description" content="Get the best working cards at SQL Premium Hub. High balance and fast delivery.">
+    <meta property="og:type" content="website">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root { --gold: #ffcc00; --dark: #0b0b0b; --wa: #25d366; --red: #ff4444; --paytm: #00baf2; }
@@ -180,4 +190,4 @@
         }
     </script>
 </body>
-      </html>
+    </html>
